--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@ https://twitter.com/marco_bf
             <h1>y por las grandes</h1>
         </div>
         <div class="slider">
-            <img src="img/big_victory/1.jpg" alt="" class="img" />
+            <img src="img/big_victory/2.jpg" alt="" class="img" />
+            <img src="img/big_victory/3.jpg" alt="" class="img" />
+            <img src="img/big_victory/4.jpg" alt="" class="img" />
+            <img src="img/big_victory/5.jpg" alt="" class="img" />
         </div>
     </div>
     <div class="screen">
@@ -247,6 +250,25 @@ https://twitter.com/marco_bf
     </div>
     <div class="screen">
         <div class="text">
+            <h1>Por el pasado</h1>
+        </div>
+        <div class="slider">
+            <img src="img/past/1.JPG" alt="" class="img" />
+            <img src="img/past/2.JPG" alt="" class="img" />
+            <img src="img/past/3.JPG" alt="" class="img" />
+            <img src="img/past/4.JPG" alt="" class="img" />
+        </div>
+    </div>
+    <div class="screen">
+        <div class="text">
+            <h1>y por el presente</h1>
+        </div>
+        <div class="slider">
+            <img src="img/present/1.jpeg" alt="" class="img" />
+        </div>
+    </div>
+    <div class="screen">
+        <div class="text">
             <h1>Porque compartimos la misma pasión</h1>
         </div>
         <div class="slider">
@@ -260,10 +282,13 @@ https://twitter.com/marco_bf
         </div>
         <div class="slider">
             <img src="img/be_there/1.JPG" alt="" class="img" />
+            <img src="img/be_there/2.JPG" alt="" class="img" />
+            <img src="img/be_there/3.JPG" alt="" class="img" />
         </div>
     </div>
-    <div class="screen">
+    <div class="screen center">
         <div class="text">
+            <h1>Por eso y por mucho más</h1>
             <h1>Te amo mucho 💕</h1>
             <h1>Feliz cumpleaños 🎂</h1>
 
